--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
 	<head>
 		<title>Kitchen Planner Ama Mn Jumia </title>
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 		<link rel="stylesheet" href="/style.css">
 	</head>
 	<body>
@@ -13,22 +12,30 @@
 		<script  src="./app.js"></script>
 		<script src="./menu.js"></script>
 		
-		<div id="open-btn" onclick="openFunction()">
-			&#9776; 
-		</div>
-
-		<div id="menu" class="menu">
-			<button id="btn-cube"    onclick="createCube()"></button>
-			<button id="rock-btn"    onclick="createRockCube()" ><img src="./rock.jpg"></button>
+		
+		
+		<nav id="menu" >
+			<div id="open-btn" onclick="openFunction()"> &#9776; </div>
+				<a href="#" class="close-btn" onclick="closeFunction()">&times;</a>
+			<ul>
+				<li id="dropdown" class="dropdown"><a href="#">Cubes <span>&rsaquo;</span></a>
+					<ul class="cubes">
+						<li><a href="#"><button id="btn-cube" onclick="createCube()"></button></a>
+						<li><a href="#"><button id="rock-btn"    onclick="createRockCube()" ><img src="./rock.jpg"></button></a>
+					</ul>
+				</li>
+				<li id="dropdown2" class="dropdown2"><a href="#">Robots <span>&rsaquo;</span></a>
+					<ul class="robots">
+						<li><a href="#"><button id="robot-btn"   onclick="createRobot()"> Robot </button></a>
+						<li><a href="#"><button id="robot2-btn"  onclick="createRobot2()"> Robot 2 </button></a>
+					</ul>
+				</li>
+			</ul>
+			
+		</nav>
+			
 			<button id="move-btn"    onclick="disableControl()">move</button>
 			<button id="view-btn"    onclick="enableControl()"> view </button>
-			<button id="robot-btn"   onclick="createRobot()"> Robot </button>
-			<button id="robot2-btn"  onclick="createRobot2()"> Robot 2 </button>
-			<a href="#" class="close-btn" onclick="closeFunction()">&times;</a>
-		</div>
-		
-			
-			
 		
 
 	</body>
