--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Kitchen Planner Ama Mn Jumia </title>
+		<title>3D Wave Kitchen Planner</title>
 		<link rel="stylesheet" href="/style.css">
 	</head>
 	<body>
@@ -10,7 +10,7 @@
 		<script  src="./OBJLoader.js"></script>
 		<script  src="./MTLLoader.js"></script>
 		<script  src="./app.js"></script>
-		<script src="./menu.js"></script>
+		<script  src="./menu.js"></script>
 		
 		
 		
@@ -36,7 +36,8 @@
 			
 			<button id="move-btn"    onclick="disableControl()">move</button>
 			<button id="view-btn"    onclick="enableControl()"> view </button>
-		
+			<button id="remove-btn"    onclick="removeCube()"> remove cube </button>
+			
 
 	</body>
 </html>
