--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 		
 		<nav id="menu" >
 			<div id="open-btn" onclick="openFunction()"> &#9776; </div>
-				<a href="#" class="close-btn" onclick="closeFunction()">&times;</a>
+			<a href="#" class="close-btn" onclick="closeFunction()">&times;</a>
+		
 			<ul>
 				<li id="dropdown" class="dropdown"><a href="#">Cubes <span>&rsaquo;</span></a>
 					<ul class="cubes">
@@ -24,19 +25,33 @@
 						<li><a href="#"><button id="rock-btn"    onclick="createRockCube()" ><img src="./rock.jpg"></button></a>
 					</ul>
 				</li>
-				<li id="dropdown2" class="dropdown2"><a href="#">Robots <span>&rsaquo;</span></a>
+
+				<li id="dropdown2" class="dropdown2"><a href="#">Porte légumes <span>&rsaquo;</span></a>
 					<ul class="robots">
 						<li><a href="#"><button id="robot-btn"   onclick="createRobot()"> Robot </button></a>
 						<li><a href="#"><button id="robot2-btn"  onclick="createRobot2()"> Robot 2 </button></a>
 					</ul>
 				</li>
+
+				<li id="dropdown3" class="dropdown3"><a href="#">Gaz<span>&rsaquo;</span></a>
+					<ul class="gaz">
+						<li><a href="#"><button id="gaz-btn"   onclick=""> gaz </button></a>
+						<li><a href="#"><button id="gaz2-btn"  onclick=""> gaz 2 </button></a>
+						<li><a href="#"><button id="gaz3-btn"  onclick=""> gaz 3 </button></a>
+					</ul>
+				</li>
 			</ul>
 			
 		</nav>
+
+
 			
 			<button id="move-btn"    onclick="disableControl()">move</button>
 			<button id="view-btn"    onclick="enableControl()"> view </button>
-			<button id="remove-btn"    onclick="removeCube()"> remove cube </button>
+			<button id="remove-btn"    onclick="removeCube()"> supprimer cube </button>
+			<button id="remove-rock-btn"    onclick="removeRockCube()"> supprimer cube2 </button>
+			<button id="calculer"    onclick="calculer()"> calculer </button>
+
 			
 
 	</body>
