--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<script  src="./app.js"></script>
 		<script  src="./menu.js"></script>
 
-		<script src="https://kit.fontawesome.com/a076d05399.js"></script>
+		<script src="./icons.js"></script>
 			<nav id="menu">
 				<div id="open-btn" onclick="openFunction()"> &#9776; </div>
 				<a href="#" id="close-btn" onclick="closeFunction()">&times;</a>
@@ -58,7 +58,7 @@
 				<a href="#" id="calculer" onclick="calculer()"> <i class="fas fa-calculator"></i> </a>
 			</nav>
 			
-			<a  href="#" id="move-btn" onclick="moveElement()"> <i class="fas fa-arrows-alt"</i></a>
+			<a  href="#" id="move-btn" onclick="moveElement()"> <i class="fas fa-arrows-alt"></i></a>
 			<a  href="#"  id="view-btn" onclick="viewElement()"> <i class="fas fa-eye"></i></a>
 			
 			
