--- a/index.html
+++ b/index.html
@@ -11,18 +11,17 @@
 		<script  src="./MTLLoader.js"></script>
 		<script  src="./app.js"></script>
 		<script  src="./menu.js"></script>
-
 		<script src="./icons.js"></script>
+		
 			<nav id="menu">
 				<div id="open-btn" onclick="openFunction()"> &#9776; </div>
 				<a href="#" id="close-btn" onclick="closeFunction()">&times;</a>
-				<p id="demo"></p>
 				<ul>
-					<li id="dropdown" class="dropdown"><a href="#">Cubes<span>&rsaquo;</span></a>
+					<li id="dropdown" class="dropdown"><a href="#">Frigidaires<span>&rsaquo;</span></a>
 						<ul>
-							<li class="dropdown1_1"><a href="#"><button id="btn-cube" onclick="createCube()"></button></button></a>
+							<li class="dropdown1_1"><a href="#"><button id="btn-fridge" onclick="createFridge()"></button></button></a>
 								<ul>
-									<li><a href="#"><a id="remove-cube" onclick="removeCube()">Supprimer</a></a></li>
+									<li><a href="#"><a id="remove-cube" onclick="removeFridge()">Supprimer</a></a></li>
 								</ul>
 							</li>
 							<li class="dropdown1_2"><a href="#"><button id="rock-btn" onclick="createRockCube()" ><img src="./rock.jpg"></button></a>
@@ -37,11 +36,11 @@
 
 
 				<ul>
-					<li id="dropdown2" class="dropdown2"><a href="#">Elements <span>&rsaquo;</span></a>
+					<li id="dropdown2" class="dropdown2"><a href="#">Gazs <span>&rsaquo;</span></a>
 						<ul>
-							<li class="dropdown2_1"><a href="#"><button id="btn-element" onclick="createEl()"></button></button></a>
+							<li class="dropdown2_1"><a href="#"><button id="btn-gaz" onclick="createGaz()"></button></a>
 								<ul>
-									<li><a href="#"><a id="remove-cube" onclick="removeEl()">Supprimer</a></a></li>
+									<li><a href="#"><a id="remove-cube" onclick="removeGaz()">Supprimer</a></a></li>
 								</ul>
 							</li>
 							<li class="dropdown2_2"><a href="#"><button id="rock-btn" onclick="createWoodEl()" ><img src="./wood2.jpg"></button></a>
@@ -60,9 +59,14 @@
 			
 			<a  href="#" id="move-btn" onclick="moveElement()"> <i class="fas fa-arrows-alt"></i></a>
 			<a  href="#"  id="view-btn" onclick="viewElement()"> <i class="fas fa-eye"></i></a>
-			
-			
-			
+
+			<div id="menu-cuisine">
+			<button   id="cuisine1" onclick="createCuisine1()"> </button>
+			<button   id="cuisine2" onclick="createCuisine2()"> </button>
+
+			<div id="open-btn2" onclick="openFunction2()"> &#9776; </div>
+			<a href="#" id="close-btn2" onclick="closeFunction2()">&times;</a>
+			</div>
 
 	</body>
 </html>
