--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
 				<div class="overlay"></div>
 				<div class="content">
 				  <div class="close-button" onclick="calculerTarif()">&times;</div>
-				  <h1 class="titre-popup">Tarif</h1>
+				  <h1 class="titre-popup">Facture</h1>
 				  <p id="demo"></p>
 				</div>
 			  </div>
@@ -472,7 +472,7 @@
 				<div class="overlay3"></div>
 				<div class="content3">
 				  <div class="close-button3" onclick="togglePrices()">&times;</div>
-				  <h1 class="titre-popup3">Prices</h1>
+				  <h1 class="titre-popup3">Tarif</h1>
 				  <p id="demo3"></p>
 				</div>
 			  </div>
